@@ -3,6 +3,7 @@
 	- Output is now available when using the /hmq command.
 	- Added a delay (0.1s) to the quest automation to reduce the likelihood of the addon getting "stuck".
 	- Any mod key can now be used to pause the automation.
+	- The selection of Threads of Fate is now entirely automated.
 	
 	Bug Fixes:
 	- Fixed an issue causing incomplete quests to take precedence over completed ones that were further down the list.
